cmake_minimum_required(VERSION 3.27)
project(untitled22)

set(CMAKE_CXX_STANDARD 23)

add_executable(untitled22 main.cpp
        UserData.h
        UserData.cpp
        Connect.h
        Connect.cpp
        Connect.cpp
        CreateAccount.h
        CreateAccount.cpp
        Encryption.h
        Encryption.cpp
        Views.h
        Screen.h
        Screen.cpp
        Book.h
        Book.cpp
        Author.h
        Author.cpp
        Buy.h
        Buy.cpp
        Administration.h
        Administration.cpp
        BookData.h
        BookData.cpp
        InsertBook.h
        InsertBook.cpp
)
